# huffman

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  codeWord.cpp  counter.cpp  huffmanDecryptor.cpp  huffmanEncryptor.cpp
lib/header/: codeWord.h  constantsAndTypes.h  counter.h  huffmanDecryptor.h  huffmanEncryptor.h  huffmanLibrary.h  libraryExceptions.h
utility/: CMakeLists.txt  main.cpp  myFileReader.cpp  myFileWriter.cpp  print.cpp  read.cpp
utility/header/: myFileReader.h  myFileWriter.h  print.h  read.h  workingWithFilesExceptions.h
